# meta-secret-core

./: .earthlyignore  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CODE_OF_CONDUCT.md  CODE_STYLE.md  CONTRIBUTING.md  Cargo.toml  Earthfile  Makefile  PROJECT_CONTEXT.md  PROJECT_OVERVIEW.md  README.md  SECURITY.md  Taskfile.yml  VERSIONS.md  WORKFLOW.md  docker-bake.hcl  iosBuild.sh  recipe.json  rustfmt.toml
core/: Cargo.toml  README.md
core-jni-lib/: Cargo.toml
core-jni-lib/src/: android_to_rust.rs  jni_to_rust.rs  lib.rs  native_app_state_manager.rs
core-swift-lib/: Cargo.toml  Package.swift  README.md
core-swift-lib/Sources/metasecretcore/: meta-secret-core.h  module.modulemap
core-swift-lib/src/: Rust_to_swift.rs  Swift_to_rust.rs  lib.rs  rust_to_swift.rs  strings.rs  swift_to_rust.rs
core/src/: lib.rs
core/src/crypto/: encoding.rs  key_pair.rs  keys.rs  mod.rs  utils.rs
core/src/errors/: mod.rs
core/src/meta_tests/: fixture_util.rs  mod.rs
core/src/meta_tests/action/: generate_user.rs  global_index.rs  global_index_action.rs  mod.rs  sign_up_claim_action.rs
core/src/meta_tests/fixture/: mod.rs
core/src/meta_tests/spec/: device_log_spec.rs  global_index_specs.rs  mod.rs  (+3 more)
core/src/models/: aead_auth_data.rs  aead_cipher_text.rs  aead_plain_text.rs  app_command_type.rs  application_state.rs  base64_encoded_text.rs  communication_channel.rs  device_info.rs  encrypted_message.rs  find_shares_request.rs  find_shares_result.rs  join_request.rs  kv_key.rs  kv_log_event.rs  kv_value_type.rs  membership_request_type.rs  membership_status.rs  meta_password_doc.rs  meta_password_id.rs  meta_password_request.rs  meta_passwords_data.rs  meta_passwords_status.rs  meta_vault.rs  mod.rs  password_recovery_request.rs  registration_status.rs  secret_distribution_doc_data.rs  secret_distribution_type.rs  serialized_dsa_key_pair.rs  serialized_key_manager.rs  serialized_transport_key_pair.rs  user_credentials.rs  user_security_box.rs  user_signature.rs  vault_doc.rs  vault_info_data.rs  vault_info_status.rs
core/src/node/: app.rs  commit_log.rs  db.rs  kv_store.rs  logger.rs  meta_db.rs  mod.rs  model_utils.rs  server_api.rs
core/src/sdk/: api.rs  mod.rs  password.rs  vault.rs
core/src/secret/: mod.rs  shared_secret.rs
core/src/shared_secret/: mod.rs  shared_secret.rs
core/src/test_utils/: mod.rs
core/tests/: common.rs  meta_app_service_test.rs  server_test.rs
core/tests/common/: mod.rs  native_app_state_manager.rs
meta-secret/: .cursorignore  .dockerignore  .earthlyignore  Cargo.toml  Dockerfile  Earthfile  recipe.json  rustfmt.toml  tarpaulin-report.html
meta-secret/.cargo/: config.toml
meta-secret/.config/: nextest.toml
meta-secret/.cursor/rules/: common.mdc
meta-secret/cli/: Cargo.toml  Dockerfile  config.yaml
meta-secret/cli/src/: main.rs
meta-secret/common/: Cargo.toml
meta-secret/common/src/: app_manager.rs  lib.rs
meta-secret/core/: Cargo.toml  README.md
meta-secret/core-swift-lib/: Cargo.toml
meta-secret/core-swift-lib/src/: swift_to_rust.rs
meta-secret/core/src/: lib.rs
meta-secret/db/redb/: Cargo.toml
meta-secret/db/sqlite/: Cargo.toml  Makefile
meta-secret/design-docs/: architecture.md  project_description.md
meta-secret/docs/programming/: event-sourcing-aggregate.md
meta-secret/meta-cli/: Cargo.toml  Dockerfile  Makefile
meta-secret/meta-cli/example/: Makefile  README.md  Taskfile.yml
meta-secret/meta-cli/src/: base_command.rs  cli_format.rs  info_command.rs  init_command.rs  init_device_command.rs  init_user_command.rs  interactive_command.rs  join_vault_command.rs  lib.rs  main.rs  recover_command.rs  recovery_request_command.rs  show_secret_command.rs  split_command.rs  template_manager.rs
meta-secret/meta-server/: Cargo.toml
meta-secret/meta-server-emulator/: Cargo.toml
meta-secret/meta-server-emulator/src/: lib.rs
meta-secret/meta-server-serverless/: Cargo.toml
meta-secret/meta-server/server-node/: Cargo.toml
meta-secret/meta-server/src/: main.rs
meta-secret/meta-server/web-server/: Cargo.toml
meta-secret/mobile/: Cargo.toml
meta-secret/mobile/android/: Cargo.toml
meta-secret/mobile/common/: Cargo.toml
meta-secret/mobile/core-swift-lib/: Cargo.toml
meta-secret/mobile/ios/: Cargo.toml  cbindgen.toml
meta-secret/mobile/scripts/: build-android.sh  build-ios.sh  build-mobile.sh
meta-secret/mobile/src/: mobile.rs
meta-secret/mobile/uniffi/: Cargo.toml  build.rs
meta-secret/mobile/uniffi-bindgen/: Cargo.toml
meta-secret/mobile/uniffi-bindgen-runner/: Cargo.toml
meta-secret/mobile/uniffi-mobile/: Cargo.toml  build.rs  uniffi.toml
meta-secret/scripts/: build-android.sh  build-ios.sh
meta-secret/tests/: Cargo.toml
meta-secret/tests/src/: lib.rs
meta-secret/wasm/: Cargo.toml  Makefile  pkg.package.json
meta-secret/wasm/.cargo/: config.toml
meta-secret/wasm/src/: app_manager.rs  lib.rs  objects.rs  wasm_app_manager.rs  wasm_repo.rs  wasm_virtual_device.rs
meta-secret/wasm/tests/: web.rs
meta-secret/web-cli/ui/: .gitignore  Dockerfile  components.json  cypress.config.ts  env.d.ts  eslint.config.js  index.html  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  vite.config.ts  vue.config.js
meta-server-emulator/: Cargo.toml  Makefile
meta-server-emulator/migrations/2023-04-22-065820_create_commit_log/: down.sql  up.sql
meta-server-emulator/src/: lib.rs  models.rs  schema.rs
meta-server-emulator/src/server/: kv_store.rs  meta_server.rs  mod.rs  slite_db.rs  sqlite_migration.rs  sqlite_store.rs
meta-test/: Cargo.toml
meta-test/tests/: app.rs  app_test.rs  server_test.rs  sqlite_server_test.rs
rust-models/: Cargo.toml  README.md
rust-models/docs/: DeviceInfo.md
rust-models/src/models/: device_info.rs  mod.rs
wasm/: Cargo.toml
wasm/src/: app_manager.rs  app_state_manager.rs  commit_log.rs  db.rs  gateway.rs  lib.rs  objects.rs  security.rs  server.rs  utils.rs  virtual_device.rs  wasm_app.rs  wasm_app_manager.rs  wasm_app_state_manager.rs  wasm_repo.rs  wasm_server.rs  wasm_sync_gateway.rs
wasm/tests/: web.rs
(+660 files in other folders)
