[workspace]

resolver = "2"

members = [
    "core",
    "meta-server-emulator",
    "core-swift-lib",
    "wasm",
    "cli"
]

exclude = [
    "meta-server-serverless"
]

[workspace.dependencies]
# Error handling
thiserror = "1.0.49"
anyhow = "1.0.75"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3" }

# Json
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
serde_derive = "1.0.188"

# Async utils
async-std = { version = "1.12.0" }
async-trait = "0.1"
flume = "0.11"
async-mutex = "1.4"

# Cryptography
ed25519-dalek = "1.0.1"
crypto_box = { version = "0.8.2", features = ["std"] }
rand = "0.8.5"
getrandom = { version = "0.2.8", features = ["js"] }
sha2 = { version = "0.10.6", features = ["oid"] }
base64 = "0.20.0"
hex = "0.4"
#https://github.com/dsprenkels/sss-rs
shamirsecretsharing = "0.1"

# Sql
diesel = { version = "2.0.0" }
diesel_migrations = { version = "2.0.0" }