[workspace]

resolver = "2"

members = [
    "core",
    "meta-server-emulator",
    "core-swift-lib",
    "wasm",
    "cli"
]

exclude = [
    "meta-server-serverless"
]

[workspace.dependencies]
# Error handling
thiserror = "1.0.63"
anyhow = "1.0.89"

# Logging and tracing
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18" }

# Json
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.128"
serde_derive = "1.0.210"

# Async utils
async-std = { version = "1.13.0" }
async-trait = "0.1.82"
flume = "0.11.0"
async-mutex = "1.4.0"

# Cryptography
ed25519-dalek = "1.0.1"
crypto_box = { version = "0.8.2", features = ["std"] }
rand = "0.8.5"
getrandom = { version = "0.2.15", features = ["js"] }
sha2 = { version = "0.10.8", features = ["oid"] }
base64 = "0.20.0"
hex = "0.4.3"
#https://github.com/dsprenkels/sss-rs
shamirsecretsharing = "0.1.5"

# Sql
diesel = { version = "2.2.4" }
diesel_migrations = { version = "2.2.0" }