[package]
name = "meta-secret-core-jni"
version = "0.1.0"
edition = "2021"

[target.'cfg(target_os="android")'.dependencies]
jni = { version = "0.21.1", default-features = false }

[lib]
crate-type = ["staticlib", "cdylib"]
name = "meta_secret_core_jni"

[dependencies]
serde = { version = '1.0.118', features = ['derive'] }
toml = "0.7.2"
meta-secret-core = { path = "../core"}
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["json", "env-filter"] }
tracing-attributes = "0.1.27"
thiserror.workspace = true
anyhow.workspace = true


[build-dependencies]
serde = { version = '1.0.118', features = ['derive'] }
toml = "0.7.2"