[package]
name = "meta-secret-core-swift"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["dylib"]
name = "meta_secret_core_swift"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
meta-secret-core = { path = "../core"}
serde_json = "1.0.87"
ed25519-dalek = "1.0"
crypto_box = "0.8.1"
base64 = "0.20.0-alpha.1"
sha2 = "0.10.6"
hex = "0.4"
anyhow = "1.0.66"
