[package]
name = "meta-secret-core"
version = "1.8.1"
edition = "2021"
license = "Apache-2.0"
description = "Meta Secret core module"
homepage = "https://github.com/meta-secret/meta-secret-core"
documentation = "https://github.com/meta-secret/meta-secret-core/blob/main/core/README.md"
repository = "https://github.com/meta-secret/meta-secret-core"
readme = "README.md"

[lib]
crate-type = ["cdylib", "lib", "staticlib"]
name = "meta_secret_core"

[dependencies]
thiserror = "1.0.37"
anyhow = "1.0.66"

reqwest = { version = "0.11.13", features = ["json"]}
async-std = { version = "1.12.0" }

ed25519-dalek = "1.0.1"
crypto_box = { version = "0.8.2", features = ["std"] }
rand = "0.8.5"
getrandom = { version = "0.2.8", features = ["js"] }
sha2 = "0.10.6"

hex = "0.4"

#https://github.com/dsprenkels/sss-rs
shamirsecretsharing = "0.1"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11"
serde-big-array = "0.4"

base64 = "0.20.0-alpha.1"

qrcode-generator = "4.1.6"
rqrr = "0.5"
image = "0.24"
