[package]
name = "meta-secret-core"
version = "2.0.0"
edition = "2021"
license = "Apache-2.0"
description = "Meta Secret core module"
homepage = "https://github.com/meta-secret/meta-secret-core"
documentation = "https://github.com/meta-secret/meta-secret-core/blob/main/core/README.md"
repository = "https://github.com/meta-secret/meta-secret-core"
readme = "README.md"

[lib]
crate-type = ["cdylib", "lib", "staticlib"]
name = "meta_secret_core"

[dependencies]

thiserror = "1.0.37"
anyhow = "1.0.66"

async-trait = "0.1"

reqwest = { version = "0.11.13", features = ["json"] }
async-std = { version = "1.12.0" }

ed25519-dalek = "1.0.1"
crypto_box = { version = "0.8.2", features = ["std"] }
rand = "0.8.5"
getrandom = { version = "0.2.8", features = ["js"] }
sha2 = { version = "0.10.6", features = ["oid"]}
base64 = "0.20.0"

hex = "0.4"

#https://github.com/dsprenkels/sss-rs
shamirsecretsharing = "0.1"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11"
serde-big-array = "0.4"
serde_derive = "^1.0"

qrcode-generator = "4.1.6"
rqrr = "0.5"
image = "0.24"

[dependencies.uuid]
version = "1.3.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
