[package]
name = "meta-secret-core"
version = "2.0.0"
edition = "2021"
license = "Apache-2.0"
description = "Meta Secret Core Module"
homepage = "https://github.com/meta-secret/meta-secret-core"
documentation = "https://github.com/meta-secret/meta-secret-core/blob/main/core/README.md"
repository = "https://github.com/meta-secret/meta-secret-core"
readme = "README.md"

[features]
test_utils = []

[lib]
crate-type = ["cdylib", "lib", "staticlib"]
name = "meta_secret_core"

[dependencies]
thiserror.workspace = true
anyhow.workspace = true

async-trait.workspace = true
flume.workspace = true
async-mutex.workspace = true
async-std = { workspace = true, features = ["unstable"] }

serde.workspace = true
serde_json.workspace = true
serde_derive.workspace = true

tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["json", "env-filter"] }
tracing-attributes = "0.1.27"

ed25519-dalek.workspace = true
crypto_box.workspace = true
rand.workspace = true
getrandom.workspace = true
sha2.workspace = true
base64.workspace = true
hex.workspace = true
#https://github.com/dsprenkels/sss-rs
shamirsecretsharing.workspace = true

serde_bytes = "0.11"
serde-big-array = "0.4"

qrcode-generator = "4.1.6"
rqrr = "0.5"
image = "0.24"
rand = { version = "0.8.5", features = [] }

[dependencies.uuid]
version = "1.3.0"
features = [
    "v4", # Lets you generate random UUIDs
    "fast-rng", # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dev-dependencies]
tokio = { version = "1.20.1", features = ["full"] }
pretty_assertions = "1"
