[workspace]

resolver = "2"

members = [
    "core",
    "db/sqlite",
    "db/redb",
    "meta-server/server-node",
    "meta-server/web-server",
    "wasm",
    "cli",
    "meta-cli",
    "tests",
    "mobile/core-swift-lib",
    "mobile/ios"
]

[workspace.dependencies]
# Error handling
thiserror = "2.0.12"
anyhow = "1.0.97"

derive_more = { version = "2.0.1", features = ["full"] }

# Logging and tracing
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", default-features = false }
tracing-attributes = "0.1.28"

# Json
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_derive = "1.0.219"
serde_yaml = "0.9.33"

# Async utils
async-std = { version = "1.13.0" }
async-trait = "0.1.87"
flume = "0.11.1"
async-mutex = "1.4.0"

# Cryptography
ed25519-dalek = "2.1.1"
rand = "0.9.0"
getrandom = { version = "0.3.1", features = ["wasm_js"] }
sha2 = { version = "0.10.8", features = ["oid"] }
base64 = "0.22.1"
hex = "0.4.3"
#https://github.com/dsprenkels/sss-rs
shamirsecretsharing = "0.1.5"
age = { version = "0.11.1", features = ["curve25519-dalek", "armor", "async", "web-sys"] }
uuid = { version = "1.3.0", features = ["v4", "js"] }

# Networking
axum = { version = "0.8.1" }
reqwest = { version = "0.12.15", features = ["json", "rustls-tls"] }
tokio = { version = "1.44.1", features = ["full"] }
tower-http = { version = "0.6.2", features = ["cors", "trace"] }
http = { version = "1.3.1" }

# Sql
diesel = { version = "2.2.8", features = ["sqlite"] }
diesel_migrations = { version = "2.2.0" }
