[workspace]

resolver = "2"

members = [
    "core",
    "db/sqlite",
    "db/redb",
    "meta-server/server-node",
    "meta-server/web-server",
    "wasm",
    "cli",
    "meta-cli",
    "tests",
    "mobile/uniffi",
    "mobile/uniffi-bindgen-runner"
]

[workspace.package]
edition = "2024"

[profile.dev]
overflow-checks = true

[workspace.dependencies]
# Error handling
thiserror = "=2.0.18"
anyhow = "=1.0.102"

derive_more = { version = "=2.1.1", features = ["full"] }

# Logging and tracing
tracing = "=0.1.44"
tracing-subscriber = { version = "=0.3.23", default-features = false }
tracing-attributes = "=0.1.31"

# Json
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.150"
serde_derive = "=1.0.228"
serde_yaml = "=0.9.34"

# Async utils
async-std = { version = "=1.13.2" }
async-trait = "=0.1.89"
flume = "=0.12.0"
async-mutex = "=1.4.1"

# Cryptography
ed25519-dalek = "=2.2.0"
rand = "=0.9.2"
getrandom = { version = "=0.3.4", features = ["wasm_js"] }
sha2 = { version = "=0.10.8", features = ["oid"] }
base64 = "=0.22.1"
hex = "=0.4.3"
#https://github.com/dsprenkels/sss-rs
shamirsecretsharing = "=0.1.7"
age = { version = "=0.11.3", features = ["curve25519-dalek", "armor", "async", "web-sys"] }
uuid = { version = "=1.23.3", features = ["v4", "js"] }

# Networking
axum = "=0.8.9"
reqwest = { version = "=0.13.4", features = ["json", "rustls"], default-features = false }
tokio = { version = "=1.52.3", features = ["full"] }
tower-http = { version = "=0.6.11", features = ["cors", "trace"] }
http = "=1.4.2"
hyper = { version = "=1.10.1", default-features = false, features = ["http1", "http2"] }

# Sql
diesel = { version = "=2.3.10", features = ["sqlite"] }
diesel_migrations = { version = "=2.3.2" }

# SQLite system dependency - force bundled for static compilation
libsqlite3-sys = { version = "=0.30.1", features = ["bundled"] }
