[package]
name = "meta-server-emulator"
version = "0.1.0"
edition = "2021"

[dependencies]
meta-secret-core = { path = "../core" }

thiserror = "1.0.40"

rusqlite = { version = "0.29.0", features = ["bundled"] }

async-trait = "0.1"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
