[package]
name = "meta-server-emulator"
version = "0.1.0"
edition = "2021"

[dependencies]
meta-secret-core = { path = "../core" }

thiserror = "1.0.40"

diesel = { version = "2.0.0", features = ["sqlite"] }
diesel_migrations = "2.0.0"

async-trait = "0.1"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

anyhow = "1.0.66"
