[package]
name = "meta-test"
version = "0.1.0"
edition = "2021"

[dependencies]
meta-secret-core = { path = "../core" }
meta-server-emulator = { path = "../meta-server-emulator" }

diesel = { version = "2.0.0", features = ["sqlite"] }
diesel_migrations = "2.0.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tokio = { version = "1.20.1", features = ["macros"] }
