[package]
name = "meta-secret-core-models"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Meta Secret core models"
homepage = "https://github.com/meta-secret/meta-secret-core"
documentation = "https://github.com/meta-secret/meta-secret-core/blob/main/core/README.md"
repository = "https://github.com/meta-secret/meta-secret-core"
readme = "README.md"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
