[package]
name = "meta-secret-wasm"
version = "0.1.0"
authors = ["cypherkitty <bynull@meta-secret.org>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
meta-secret-core = { path = "../core" }

anyhow.workspace = true
thiserror.workspace = true

async-trait.workspace = true
flume.workspace = true
async-mutex.workspace = true

serde.workspace = true
serde_json.workspace = true
serde_derive.workspace = true

tracing.workspace = true
tracing-subscriber = { workspace = true, default-features = false, features = ["fmt", "time"] }

getrandom.workspace = true

# Wasm dependencies
tracing-web = "0.1.2"

wasm-bindgen = { version = "0.2.87", features = ["serde-serialize"] }
rexie = "0.6.2"

serde-wasm-bindgen = "0.6.0"
wasm-bindgen-futures = "0.4.37"

js-sys = { version = "0.3.63" }
web-sys = { version = "0.3.60", features = [
    "DomException",
    "DomStringList",
    "Event",
    "StorageType",
    "Window"
] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.37"

meta-secret-core = { path = "../core" }