[package]
name = "meta-secret-core-swift"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "lib", "staticlib"]
name = "meta_secret_core_swift"

[dependencies]
meta-secret-core = { path = "../core"}

anyhow.workspace = true

serde.workspace = true
serde_json.workspace = true
serde_derive.workspace = true

ed25519-dalek.workspace = true
base64.workspace = true
sha2.workspace = true
hex.workspace = true
