[package]
name = "meta-secret-core"
version = "2.0.0"
edition = "2024"
license = "Apache-2.0"
description = "Meta Secret Core Module"
homepage = "https://github.com/meta-secret/meta-secret-core"
documentation = "https://github.com/meta-secret/meta-secret-core/blob/main/core/README.md"
repository = "https://github.com/meta-secret/meta-secret-core"
readme = "README.md"

[features]
test_utils = []

[lib]
crate-type = ["cdylib", "lib", "staticlib"]
name = "meta_secret_core"

[build]
target = "x86_64-unknown-linux-gnu"

[dependencies]
thiserror.workspace = true
anyhow.workspace = true

derive_more.workspace = true

async-trait.workspace = true
flume.workspace = true
async-mutex.workspace = true
async-std = { workspace = true, features = ["unstable"] }

serde.workspace = true
serde_json.workspace = true
serde_derive.workspace = true

tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["fmt", "json", "env-filter"] }
tracing-attributes.workspace = true

ed25519-dalek.workspace = true
rand.workspace = true
getrandom.workspace = true
sha2.workspace = true
base64.workspace = true
hex.workspace = true
#https://github.com/dsprenkels/sss-rs
shamirsecretsharing.workspace = true
age.workspace = true

serde-big-array = "0.5.1"

qrcode-generator = "5.0.0"
rqrr = "0.8.0"
image = "0.25.5"

wasm-bindgen = "0.2.99"
log = "0.4.26"

uuid.workspace = true

[dev-dependencies]
tokio = { version = "1.44.0", features = ["full"] }
tempfile = "3.18.0"
