[package]
name = "meta-cli"
version = "1.1.0"
edition = "2024"

[dependencies]
meta-secret-core = { path = "../core" }
meta-db-redb = { path = "../db/redb" }

thiserror.workspace = true
anyhow.workspace = true
secrecy = "0.10.3"

clap = { version = "4.5.37", features = ["derive"] }

serde.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
