[package]
name = "meta-server-serverless"
version = "0.1.0"
edition = "2021"

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = "0.0.17"
serde = "1.0.163"
serde_json = "1.0.96"
meta-secret-core = { path = "../core" }
rand = "0.8.5"
async-trait = "0.1"
thiserror = "1.0.40"

[profile.release]
lto = true
strip = true
codegen-units = 1

anyhow = "1.0.66"