[package]
name = "mobile"
version = "0.1.0"
edition = "2021"

[lib]
name = "mobile"
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
meta-secret-core = { path = "../core", features = ["mobile"] }
meta-server-node = { path = "../meta-server/server-node", features = ["test-framework"] }
thiserror.workspace = true
anyhow.workspace = true
derive_more.workspace = true
async-std = { workspace = true }
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["fmt"] }
tracing-attributes.workspace = true
reqwest = "0.12.15"

[dev-dependencies]
tokio = { version = "1.44.1", features = ["full"] }
