[package]
name = "meta-secret-tests"
version = "0.1.0"
edition = "2024"

[features]
test-framework = []

[dependencies]
meta-secret-core = { path = "../core", features = ["test-framework"] }
meta-server-node = { path = "../meta-server/server-node", features = ["test-framework"] }

thiserror.workspace = true
anyhow.workspace = true

derive_more.workspace = true

serde.workspace = true
serde_json.workspace = true
serde_derive.workspace = true

tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["fmt", "json", "env-filter"] }
tracing-attributes.workspace = true

tokio.workspace = true
