[package]
name = "meta-db-redb"
version = "2.0.0"
edition.workspace = true

[dependencies]
meta-secret-core = { path = "../../core" }

thiserror.workspace = true
anyhow.workspace = true

async-trait.workspace = true

serde.workspace = true
serde_json.workspace = true
serde_derive.workspace = true

redb = "3.1.0"
tracing.workspace = true

[dev-dependencies]
tempfile = "3.25.0"
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

