[package]
name = "meta-db-sqlite"
version = "0.1.0"
edition = "2024"

[dependencies]
meta-secret-core = { path = "../../core" }

thiserror.workspace = true
anyhow.workspace = true

async-trait.workspace = true

serde.workspace = true
serde_json.workspace = true
serde_derive.workspace = true

diesel = { workspace = true, features = ["sqlite"] }
diesel_migrations = { workspace = true, features = ["sqlite"] }
tracing.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
tempfile = "3.20.0"
tokio = { workspace = true, features = ["rt-multi-thread"] }
