[package]
name = "meta-server"
version = "0.1.0"
edition = "2024"

[dependencies]
meta-secret-core = { path = "../../core" }
meta-server-node = { path = "../server-node" }
meta-db-sqlite = { path = "../../db/sqlite" }

thiserror.workspace = true
anyhow.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true

async-trait.workspace = true

serde.workspace = true
serde_json.workspace = true
serde_derive.workspace = true

tokio.workspace = true
axum = { workspace = true, features = ["ws"] }
tower-http.workspace = true
http.workspace = true
async-std.workspace = true
tokio-tungstenite = "0.26"
futures-util = "0.3"
