[package]
name = "meta-server"
version = "2.0.0"
edition.workspace = true

[dependencies]
meta-secret-core = { path = "../../core" }
meta-server-node = { path = "../server-node" }
meta-db-sqlite = { path = "../../db/sqlite" }

thiserror.workspace = true
anyhow.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true

async-trait.workspace = true

serde.workspace = true
serde_json.workspace = true
serde_derive.workspace = true

tokio.workspace = true
axum.workspace = true
tower-http.workspace = true
http.workspace = true
async-std.workspace = true
