[package]
name = "mobile-android"
version = "0.1.0"
edition = "2024"

[lib]
name = "mobile"
crate-type = ["lib", "cdylib", "staticlib"]

[features]
default = []
mobile_only = []

[dependencies]
meta-secret-core = { path = "../../core", features = ["mobile"] }
meta-secret-wasm = { path = "../../wasm", features = ["mobile"] }
meta-db-sqlite = { path = "../../db/sqlite" }
mobile-common = { path = "../common" }
anyhow.workspace = true
once_cell = "1.21.1"
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["fmt"] }
tracing-attributes.workspace = true
tokio = { version = "1.44.1", features = ["rt", "sync", "time"] }
futures = "0.3.30"
jni = "0.21.1"

[dev-dependencies]
tokio = { version = "1.44.1", features = ["full"] }

[target.'cfg(target_os = "android")'.lib]
crate-type = ["cdylib"]
