[package]
name = "mobile-android"
version = "0.1.0"
edition = "2021"

[lib]
name = "mobile"
crate-type = ["lib", "cdylib", "staticlib"]

[features]
default = []
mobile_only = []

[dependencies]
meta-secret-core = { path = "../../core", features = ["mobile"] }
mobile-common = { path = "../common" }
once_cell = "1.21.3"
serde_json.workspace = true
tokio = { version = "1.49.0", features = ["rt", "sync", "time"] }
jni = "0.21.1"

[dev-dependencies]
tokio = { version = "1.49.0", features = ["full"] }