[package]
name = "mobile-common"
version = "0.1.0"
edition = "2021"

[dependencies]
meta-secret-core = { path = "../../core", features = ["mobile"] }
meta-db-sqlite = { path = "../../db/sqlite" }
anyhow.workspace = true
tracing.workspace = true
once_cell = "1.21.3"
tokio = { version = "1.49.0", features = ["rt", "macros"] }