[package]
name = "mobile-common"
version = "0.1.0"
edition = "2021"

[dependencies]
meta-secret-core = { path = "../../core", features = ["mobile"] }
meta-db-sqlite = { path = "../../db/sqlite" }
anyhow.workspace = true
tracing.workspace = true
once_cell = "1.21.3"
serde_json.workspace = true
tokio = { version = "1.49.0", features = ["rt", "rt-multi-thread", "macros"] }
time = { version = "0.3.41", features = ["macros", "formatting"] }