[package]
name = "mobile-common"
version = "0.1.0"
edition.workspace = true

[dependencies]
meta-secret-core = { path = "../../core", features = ["mobile"] }
meta-db-sqlite = { path = "../../db/sqlite" }
anyhow.workspace = true
tracing.workspace = true
once_cell = "1.21.4"
serde_json.workspace = true
tokio = { version = "1.52.3", features = ["rt", "rt-multi-thread", "macros"] }
time = { version = "0.3.49", features = ["macros", "formatting"] }