[package]
name = "mobile-ios"
version = "0.1.0"
edition = "2021"

[lib]
name = "mobile"
crate-type = ["lib", "cdylib", "staticlib"]

[features]
default = []
mobile_only = []

[dependencies]
meta-secret-core = { path = "../../core", features = ["mobile"] }
mobile-common = { path = "../common" }
tokio = { version = "1.49.0", features = ["rt", "sync", "time"] }
once_cell = "1.21.3"
serde_json.workspace = true

[dev-dependencies]
tokio = { version = "1.49.0", features = ["full"] }
