[package]
name = "uniffi-mobile"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "staticlib"]
name = "meta_core_mobile"

[dependencies]
meta-secret-core = { path = "../../core", features = ["mobile"] }
uniffi = { workspace = true, features = ["cli"] }
anyhow = { workspace = true }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["fmt"] }
tracing-attributes.workspace = true
tokio = { workspace = true, features = ["full", "rt-multi-thread"] }
serde_json = { workspace = true }
log = "0.4.26"

[build-dependencies]
uniffi = { version = "0.29.2", features = [ "build" ] }