[package]
name = "mobile-uniffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]
name = "metasecret_mobile"

[dependencies]
mobile-common = { path = "../common" }
meta-secret-core = { path = "../../core", features = ["mobile"] }
uniffi = { version = "0.28.3", default-features = false }

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21.1"
rustls-platform-verifier = "0.6.2"

[build-dependencies]
uniffi_build = { version = "0.28.3", features = ["builtin-bindgen"] }
